unpackaged/main/default/objects/SDO_SCOM_Auction__c/SDO_SCOM_Auction__c.object-meta.xml
<CustomObject>
    <label>Auction</label>
    <nameField>
        <label>Auction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Auctions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>