unpackaged/main/default/objects/SDO_SCOM_Auction__c/fields/End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Time__c</fullName>
    <description>End date and time for Auction</description>
    <label>End Date &amp; Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>