unpackaged/main/default/objects/SDO_SCOM_Auction__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product for which auction is getting created</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Auctions</relationshipLabel>
    <relationshipName>SDO_SCOM_Auctions</relationshipName>
    <type>Lookup</type>
</CustomField>