unpackaged/main/default/objects/SDO_SCOM_Auction__c/fields/Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Time__c</fullName>
    <description>Stat Date and Time for Auction</description>
    <label>Start Date &amp; Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>