unpackaged/main/default/objects/SDO_SCOM_Auction__c/fields/Starting_Bid_Price__c.field-meta.xml
<CustomField>
    <fullName>Starting_Bid_Price__c</fullName>
    <label>Starting Bid Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>