unpackaged/main/default/objects/SDO_SCOM_Auction__c/fields/Web_Store__c.field-meta.xml
<CustomField>
    <fullName>Web_Store__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Web store for which auction is getting created</description>
    <label>Web Store</label>
    <referenceTo>WebStore</referenceTo>
    <relationshipLabel>Auctions</relationshipLabel>
    <relationshipName>SDO_SCOM_Auctions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>